# imperal-newsletter-writer-extension

./: .gitignore  README.md  api_client.py  app.py  cache_helpers.py  handlers_fill.py  handlers_generate.py  handlers_newsletters.py  handlers_projects.py  imperal.json  main.py  navstate.py  panels_side.py  panels_workspace.py  params.py  pyproject.toml  response_models.py  richtext.py  skeleton.py
docs/: extension.md
tests/: test_cache_helpers.py  test_handlers.py  test_newsletters.py  test_params.py  test_richtext.py  test_skeleton.py
