[project]
name = "newsletter-writer"
version = "1.0.0"
description = "Newsletter Writer — project-based email newsletter writing: per-brand context, AI generation with grounded self-review, panel-only editing"
requires-python = ">=3.11"
dependencies = ["imperal-sdk>=5.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "params", "response_models",
    "api_client", "navstate", "skeleton",
    "handlers_projects", "handlers_newsletters", "handlers_generate",
    "panels_side", "panels_workspace",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
