[project]
name = "newsletter-writer"
version = "1.5.0"
description = "Newsletter Writer — project-based email newsletter writing: per-brand context, AI generation with grounded self-review, panel-only editing"
requires-python = ">=3.11"
dependencies = ["imperal-sdk>=5.9.11"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "params", "response_models",
    "api_client", "richtext", "navstate", "skeleton",
    "handlers_projects", "handlers_fill", "handlers_newsletters", "handlers_generate",
    "panels_side", "panels_workspace",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
